--- a/Veiculos/pom.xml
+++ b/Veiculos/pom.xml
@@ -2,21 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<groupId>com.projeto</groupId>
+	<artifactId>veiculos</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<name>Veiculos</name>
+
+	<description>Projeto Veiculos para o Trabalho da Faculdade</description>
+
+	<properties>
+		<java.version>11</java.version>
+	</properties>
+
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.4.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.projeto</groupId>
-	<artifactId>veiculos</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>Veiculos</name>
-	<description>Projeto Veiculos para o Trabalho da Faculdade</description>
-	<properties>
-		<java.version>11</java.version>
-	</properties>
 
 	<dependencies>
 
@@ -69,7 +75,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
